# imnot

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  cliff.toml  docker-compose.yml  package.json  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: design-docs-endpoints.md  design-mirage-generate.md
docs/superpowers/plans/: 2026-04-10-async-pattern.md
docs/superpowers/specs/: 2026-04-10-async-pattern-design.md
imnot/: cli.py  config.py  logging_setup.py  partners.py  postman.py
imnot/api/: server.py
imnot/engine/: router.py  session_store.py
imnot/engine/patterns/: async_.py  oauth.py  paginated.py  push.py
imnot/examples/staylink/: partner.yaml
imnot/loader/: yaml_loader.py
imnot/ui/: index.html  input.css
imnot/ui/css/: base.css  footer.css  header.css  main.css
mirage/: cli.py
mirage/api/: server.py
mirage/engine/: router.py  session_store.py
mirage/engine/patterns/: async_.py  (+2 more)
mirage/loader/: yaml_loader.py
partners/: README.md
partners/apaleo/: partner.yaml
partners/bookingco/: partner.yaml
partners/staylink/: partner.yaml
scripts/: css_build.py  smoke_test.sh
scripts/qa/: run.sh  testingpartner.yaml
tests/: conftest.py  test_async_pattern.py  test_cli.py  test_config.py  test_docs.py  test_logging_setup.py  test_oauth_pattern.py  test_paginated_pattern.py  test_partners.py  test_poll_pattern.py  test_postman.py  test_push_pattern.py  test_router.py  test_server.py  test_session_store.py  test_static_pattern.py  test_ui.py  test_yaml_loader.py
