[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "imnot"
version = "0.4.5"
description = "A stateful API mock server for integration testing"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Eduardo Sanhueso", email = "edu2105@users.noreply.github.com" }
]
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pyyaml>=6.0.1",
    "click>=8.1.7",
    "aiosqlite>=0.20.0",
    "httpx>=0.27.0",      # outbound callbacks (push pattern) + TestClient in tests
]

[project.urls]
Homepage = "https://github.com/edu2105/imnot"
Repository = "https://github.com/edu2105/imnot"
Issues = "https://github.com/edu2105/imnot/issues"
Changelog = "https://github.com/edu2105/imnot/blob/main/CHANGELOG.md"

[project.scripts]
imnot = "imnot.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["imnot"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
